--- a/schema/types/Group.yaml
+++ b/schema/types/Group.yaml
@@ -10,35 +10,39 @@ properties:
     isCore: true
     pattern: STRICT_CODE
     label: Code
-    description: 'Unique code/id for this item.'
+    description: |
+      Unique code for the group. Must be lowercase, and ideally only letters,
+      numbers and hyphens.
   name:
     type: Name
     canIdentify: true
     isCore: true
     label: Name
-    description: The name of the group.
+    description: The official name of the group.
   description:
     type: Paragraph
     isCore: true
     label: Description
-    description: What the group does.
+    description:
+      A description of what the group's areas of responsibility and activities
+      are.
   isActive:
     type: Boolean
     canFilter: true
     label: Active
-    description: Whether or not the group is still in existence.
+    description: Whether or not the group still exists.
   costCentre:
     type: CostCentre
     direction: incoming
     label: Cost Centre
     relationship: PAYS_FOR
-    description: The Cost Centre associated with the group.
+    description: The cost centre that pays for this groups's budget.
   techDirector:
     type: Person
     direction: outgoing
     label: Tech Director
     relationship: HAS_TECH_DIRECTOR
-    description: The tech director for the group.
+    description: The technical director for the group.
   productOwner:
     type: Person
     direction: outgoing
@@ -56,13 +60,19 @@ properties:
     direction: outgoing
     label: Top level teams
     relationship: HAS_TEAM
-    description: The top level teams working under the group.
+    description: |
+      The top level teams that form the main subdivisions of the group. In
+      groups that are too small to have a hierarchical structure, this may
+      list all the groups teams
     hasMany: true
   allTeams:
     type: Team
     label: All teams
     direction: outgoing
     relationship: HAS_TEAM
-    description: The teams working under the group.
+    description: |
+      All the teams that are part of this group. This is populated by traversing
+      the team hierarchy in the group and the list does not need to be manually
+      maintained
     hasMany: true
     isRecursive: true
