--- a/schema/types/CookieInstance.yaml
+++ b/schema/types/CookieInstance.yaml
@@ -1,13 +1,13 @@
 name: CookieInstance
 description: |
-  A node with cookie relationship data specific to cookie attached to domain/product. Data includes cookie path and last seen date, 
-  represented by updated timestamp and product it is set on. 
+  A node with cookie relationship data specific to a cookie attached to a domain/product website. Data includes cookie path and last seen date.
+
 rank: 100
 properties:
   code:
     type: Code
     label: Code
-    description: Unique code/id for this data node. 
+    description: Unique code for this record, an amalgamation of the cookie name and domain it's found on.
     canIdentify: true
     required: true
     unique: true
@@ -19,7 +19,6 @@ properties:
     label: Path
     description: The path the cookie is set on. 
     required: true
-    isCore: true
   
   product: 
     type: Word
@@ -29,11 +28,11 @@ properties:
     isCore: true
     canFilter: true
 
-  hasCookieOf:
+  isInstanceOfCookie:
     type: Cookie
-    label: Cookie
+    label: Cookie details
     relationship: IS_SET_AS
-    description: The cookie data for cookie found on product/domain.
+    description: Information about what the cookie is for, taken from cookiepedia.
     direction: incoming 
 
 fieldsets:
