--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -385,6 +385,7 @@ properties:
     type: Date
     description: The date that Operations last reviewed this system.
     label: Last review date
+    fieldset: review
 fieldsets:
   general:
     heading: General information
@@ -404,3 +405,5 @@ fieldsets:
     heading: Monitoring
   network:
     heading: Related resources
+  review:
+    heading: Review
