--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "clone": "^2.1.2",
     "common-tags": "^1.8.0",
     "deep-freeze": "0.0.1",
+    "graphql": "^14.1.1",
     "js-yaml": "^3.12.0",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "node-fetch": "^2.3.0"
   }
 }
