--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -66,7 +66,7 @@ properties:
     fieldset: personalData
   containsPersonalData:
     type: Boolean
-    label: Does this system store or process Personal Data?
+    label: Does this system handle Personal Data?
     description: |
       Personal data means any information from which an individual can be
       identified directly or indirectly.
@@ -79,7 +79,7 @@ properties:
     fieldset: personalData
   containsSensitiveData:
     type: Boolean
-    label: Does this system store or process Sensitive Data?
+    label: Does this system handle Sensitive Data?
     description: |
       Sensitive, or special category data, is a more regulated subset of
       personal data, including race, ethnic origin, politics, religion,
