Cookie schema updated as per user feedback

--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -123,6 +123,11 @@ CookiePurpose:
     - Performance
     - Functionality
     - TargetingOrAdvertising
+CookieExpiry:
+  description: Cookie expiry type
+  options:
+    - Session 
+    - Persistent
 
 
 
