--- a/schema/types/Cookie.yaml
+++ b/schema/types/Cookie.yaml
@@ -53,31 +53,16 @@ properties:
     required: true
     isCore: true
     fieldset: main
-
-  persistent:
-    type: Int
-    label: Number of times found as persistent cookie
+  
+  expiry:
+    type: CookieExpiry
+    label: Session or Persistent Cookie
     description: |
-      The number of times the cookie has been found as a persistent cookie from all known occurences of this cookie. This information is taken from CookiePedia at point of last update.
+      Information taken from cookie audit confirming if cookie found as a session or persistent cookie at time of last audit. 
     required: true
     isCore: true
     fieldset: main
   
-  session:
-    type: Int
-    label: Number of times found as a session cookie
-    description: |
-      The number of times the cookie has been found as a session cookie from all known occurences of this cookie. This information is taken from CookiePedia at point of last update.
-    required: true
-    isCore: true
-    fieldset: main
-  
-  avgLifeSpan:
-    type: Int
-    label: Average Life Span
-    description: |
-      The average life span of the cookie generated from all known occurrences of this cookie. This information is taken from CookiePedia at point of last update.
-    isCore: true
 
   hasCookieInstanceOf:
     type: CookieInstance
