--- a/schema/types/CookieInstance.yaml
+++ b/schema/types/CookieInstance.yaml
@@ -33,6 +33,15 @@ properties:
     required: true 
     isCore: true
 
+  expiry:
+    type: CookieExpiry
+    label: Session or Persistent Cookie
+    description: |
+      Information taken from cookie audit confirming if cookie found as a session or persistent cookie at time of last audit. 
+    required: true
+    isCore: true
+    fieldset: main
+
   isInstanceOfCookie:
     type: Cookie
     label: Cookie details
