--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/Financial-Times/biz-ops-schema#readme",
   "devDependencies": {
     "@financial-times/rel-engage": "^5.1.0-beta.13",
+    "aws-sdk": "^2.395.0",
     "jest": "^23.6.0",
+    "semver": "^5.6.0",
     "valid-url": "^1.0.9"
   },
   "dependencies": {
