type updated to party

--- a/schema/types/Cookie.yaml
+++ b/schema/types/Cookie.yaml
@@ -22,8 +22,8 @@ properties:
     isCore: true
     fieldset: main
 
-  type:
-    type: CookieType
+  party:
+    type: CookieParty
     label: Type
     description: First or Third party cookie.
     required: true
