--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -111,7 +111,7 @@ GDPRProcess:
     # # TBD
     # # Work is still ongoing to define delete methods for a small number of systems.
     # - TBD
-CookieType:
+CookieParty:
   description: Cookie party classification type
   options:
     - FirstParty 
